// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildBusinessCardHtml > renders stable markup for template: amber_gold 1`] = `
"
<!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8" />
    <style>
      body {
        margin: 0;
        padding: 24px;
        background: #f5f7fb;
        font-family: "Segoe UI", Arial, sans-serif;
      }
      .page {
        max-width: 760px;
        margin: 0 auto;
      }
      .cards-row {
        display: flex;
        gap: 14px;
        flex-wrap: wrap;
      }
      .card {
        width: 340px;
        min-height: 190px;
        border: 2px solid #B45309;
        border-radius: 14px;
        background: #FFF8E8;
        color: #3D2A0D;
        box-sizing: border-box;
        padding: 14px;
      }
      .front-top {
        display: flex;
        gap: 10px;
        align-items: flex-start;
      }
      .badge {
        width: 40px;
        height: 40px;
        border-radius: 10px;
        border: 1px solid #B45309;
        background: #ffffff;
        display: flex;
        align-items: center;
        justify-content: center;
        font-size: 13px;
        font-weight: 700;
        color: #B45309;
      }
      .title {
        font-size: 21px;
        font-weight: 800;
        line-height: 1.1;
      }
      .owner {
        margin-top: 4px;
        font-size: 13px;
        font-weight: 700;
        color: #92400E;
      }
      .tagline {
        margin-top: 8px;
        font-size: 11px;
      }
      .detail-row {
        font-size: 11px;
        line-height: 1.45;
        color: #3D2A0D;
      }
      .details {
        margin-top: 8px;
        display: grid;
        gap: 2px;
      }
      .back {
        background: #B45309;
        border-color: #3D2A0D;
        color: #ffffff;
      }
      .back-head {
        display: flex;
        justify-content: space-between;
        align-items: flex-start;
        gap: 8px;
      }
      .back-title {
        font-size: 18px;
        font-weight: 800;
        line-height: 1.2;
      }
      .qr {
        width: 52px;
        height: 52px;
        border-radius: 8px;
        background: #ffffff;
        display: flex;
        align-items: center;
        justify-content: center;
      }
      .qr::before {
        content: "";
        width: 24px;
        height: 24px;
        border: 2px solid #101828;
        border-radius: 4px;
      }
      .address {
        margin-top: 8px;
        font-size: 11px;
        line-height: 1.4;
        opacity: 0.95;
      }
      .watermark-overlay {
        position: absolute;
        bottom: 24px;
        right: 24px;
        font-size: 11px;
        font-weight: 800;
        color: #98a2b3;
        opacity: 0.6;
        letter-spacing: 0.5px;
      }
    </style>
  </head>
  <body>
    <div class="page">
      <div class="cards-row">
        <div class="card">
          <div class="front-top">
            <div class="badge">AT</div>
            <div>
              <div class="title">ACME Traders &amp; Sons</div>
              <div class="owner">Shubh Jain</div>
            </div>
          </div>
          <div class="tagline">Trusted billing partner since 2016</div>
          <div class="details">
            <div class="detail-row">+91 98765 43210</div>
            <div class="detail-row">hello@acme.test</div>
            <div class="detail-row">https://acme.test</div>
          </div>
        </div>

        <div class="card back">
          <div class="back-head">
            <div class="back-title">ACME Traders &amp; Sons</div>
            <div class="qr"></div>
          </div>
          <div class="address">Main Road, Ratlam</div>
          <div class="address">GSTIN: 23ABCDE1234F1Z5</div>
        </div>
      </div>
    </div>
    <div class="watermark-overlay">⚡ Generated by Vahi</div>
  </body>
</html>"
`;

exports[`buildBusinessCardHtml > renders stable markup for template: charcoal_clean 1`] = `
"
<!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8" />
    <style>
      body {
        margin: 0;
        padding: 24px;
        background: #f5f7fb;
        font-family: "Segoe UI", Arial, sans-serif;
      }
      .page {
        max-width: 760px;
        margin: 0 auto;
      }
      .cards-row {
        display: flex;
        gap: 14px;
        flex-wrap: wrap;
      }
      .card {
        width: 340px;
        min-height: 190px;
        border: 2px solid #3F3F46;
        border-radius: 14px;
        background: #F4F4F5;
        color: #18181B;
        box-sizing: border-box;
        padding: 14px;
      }
      .front-top {
        display: flex;
        gap: 10px;
        align-items: flex-start;
      }
      .badge {
        width: 40px;
        height: 40px;
        border-radius: 10px;
        border: 1px solid #3F3F46;
        background: #ffffff;
        display: flex;
        align-items: center;
        justify-content: center;
        font-size: 13px;
        font-weight: 700;
        color: #3F3F46;
      }
      .title {
        font-size: 21px;
        font-weight: 800;
        line-height: 1.1;
      }
      .owner {
        margin-top: 4px;
        font-size: 13px;
        font-weight: 700;
        color: #52525B;
      }
      .tagline {
        margin-top: 8px;
        font-size: 11px;
      }
      .detail-row {
        font-size: 11px;
        line-height: 1.45;
        color: #18181B;
      }
      .details {
        margin-top: 8px;
        display: grid;
        gap: 2px;
      }
      .back {
        background: #3F3F46;
        border-color: #18181B;
        color: #ffffff;
      }
      .back-head {
        display: flex;
        justify-content: space-between;
        align-items: flex-start;
        gap: 8px;
      }
      .back-title {
        font-size: 18px;
        font-weight: 800;
        line-height: 1.2;
      }
      .qr {
        width: 52px;
        height: 52px;
        border-radius: 8px;
        background: #ffffff;
        display: flex;
        align-items: center;
        justify-content: center;
      }
      .qr::before {
        content: "";
        width: 24px;
        height: 24px;
        border: 2px solid #101828;
        border-radius: 4px;
      }
      .address {
        margin-top: 8px;
        font-size: 11px;
        line-height: 1.4;
        opacity: 0.95;
      }
      .watermark-overlay {
        position: absolute;
        bottom: 24px;
        right: 24px;
        font-size: 11px;
        font-weight: 800;
        color: #98a2b3;
        opacity: 0.6;
        letter-spacing: 0.5px;
      }
    </style>
  </head>
  <body>
    <div class="page">
      <div class="cards-row">
        <div class="card">
          <div class="front-top">
            <div class="badge">AT</div>
            <div>
              <div class="title">ACME Traders &amp; Sons</div>
              <div class="owner">Shubh Jain</div>
            </div>
          </div>
          <div class="tagline">Trusted billing partner since 2016</div>
          <div class="details">
            <div class="detail-row">+91 98765 43210</div>
            <div class="detail-row">hello@acme.test</div>
            <div class="detail-row">https://acme.test</div>
          </div>
        </div>

        <div class="card back">
          <div class="back-head">
            <div class="back-title">ACME Traders &amp; Sons</div>
            <div class="qr"></div>
          </div>
          <div class="address">Main Road, Ratlam</div>
          <div class="address">GSTIN: 23ABCDE1234F1Z5</div>
        </div>
      </div>
    </div>
    <div class="watermark-overlay">⚡ Generated by Vahi</div>
  </body>
</html>"
`;

exports[`buildBusinessCardHtml > renders stable markup for template: forest_pro 1`] = `
"
<!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8" />
    <style>
      body {
        margin: 0;
        padding: 24px;
        background: #f5f7fb;
        font-family: "Segoe UI", Arial, sans-serif;
      }
      .page {
        max-width: 760px;
        margin: 0 auto;
      }
      .cards-row {
        display: flex;
        gap: 14px;
        flex-wrap: wrap;
      }
      .card {
        width: 340px;
        min-height: 190px;
        border: 2px solid #0F766E;
        border-radius: 14px;
        background: #EAFBF0;
        color: #0B3B2E;
        box-sizing: border-box;
        padding: 14px;
      }
      .front-top {
        display: flex;
        gap: 10px;
        align-items: flex-start;
      }
      .badge {
        width: 40px;
        height: 40px;
        border-radius: 10px;
        border: 1px solid #0F766E;
        background: #ffffff;
        display: flex;
        align-items: center;
        justify-content: center;
        font-size: 13px;
        font-weight: 700;
        color: #0F766E;
      }
      .title {
        font-size: 21px;
        font-weight: 800;
        line-height: 1.1;
      }
      .owner {
        margin-top: 4px;
        font-size: 13px;
        font-weight: 700;
        color: #115E59;
      }
      .tagline {
        margin-top: 8px;
        font-size: 11px;
      }
      .detail-row {
        font-size: 11px;
        line-height: 1.45;
        color: #0B3B2E;
      }
      .details {
        margin-top: 8px;
        display: grid;
        gap: 2px;
      }
      .back {
        background: #0F766E;
        border-color: #0B3B2E;
        color: #ffffff;
      }
      .back-head {
        display: flex;
        justify-content: space-between;
        align-items: flex-start;
        gap: 8px;
      }
      .back-title {
        font-size: 18px;
        font-weight: 800;
        line-height: 1.2;
      }
      .qr {
        width: 52px;
        height: 52px;
        border-radius: 8px;
        background: #ffffff;
        display: flex;
        align-items: center;
        justify-content: center;
      }
      .qr::before {
        content: "";
        width: 24px;
        height: 24px;
        border: 2px solid #101828;
        border-radius: 4px;
      }
      .address {
        margin-top: 8px;
        font-size: 11px;
        line-height: 1.4;
        opacity: 0.95;
      }
      .watermark-overlay {
        position: absolute;
        bottom: 24px;
        right: 24px;
        font-size: 11px;
        font-weight: 800;
        color: #98a2b3;
        opacity: 0.6;
        letter-spacing: 0.5px;
      }
    </style>
  </head>
  <body>
    <div class="page">
      <div class="cards-row">
        <div class="card">
          <div class="front-top">
            <div class="badge">AT</div>
            <div>
              <div class="title">ACME Traders &amp; Sons</div>
              <div class="owner">Shubh Jain</div>
            </div>
          </div>
          <div class="tagline">Trusted billing partner since 2016</div>
          <div class="details">
            <div class="detail-row">+91 98765 43210</div>
            <div class="detail-row">hello@acme.test</div>
            <div class="detail-row">https://acme.test</div>
          </div>
        </div>

        <div class="card back">
          <div class="back-head">
            <div class="back-title">ACME Traders &amp; Sons</div>
            <div class="qr"></div>
          </div>
          <div class="address">Main Road, Ratlam</div>
          <div class="address">GSTIN: 23ABCDE1234F1Z5</div>
        </div>
      </div>
    </div>
    <div class="watermark-overlay">⚡ Generated by Vahi</div>
  </body>
</html>"
`;

exports[`buildBusinessCardHtml > renders stable markup for template: indigo_modern 1`] = `
"
<!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8" />
    <style>
      body {
        margin: 0;
        padding: 24px;
        background: #f5f7fb;
        font-family: "Segoe UI", Arial, sans-serif;
      }
      .page {
        max-width: 760px;
        margin: 0 auto;
      }
      .cards-row {
        display: flex;
        gap: 14px;
        flex-wrap: wrap;
      }
      .card {
        width: 340px;
        min-height: 190px;
        border: 2px solid #4F46E5;
        border-radius: 14px;
        background: #EEF2FF;
        color: #1E1B4B;
        box-sizing: border-box;
        padding: 14px;
      }
      .front-top {
        display: flex;
        gap: 10px;
        align-items: flex-start;
      }
      .badge {
        width: 40px;
        height: 40px;
        border-radius: 10px;
        border: 1px solid #4F46E5;
        background: #ffffff;
        display: flex;
        align-items: center;
        justify-content: center;
        font-size: 13px;
        font-weight: 700;
        color: #4F46E5;
      }
      .title {
        font-size: 21px;
        font-weight: 800;
        line-height: 1.1;
      }
      .owner {
        margin-top: 4px;
        font-size: 13px;
        font-weight: 700;
        color: #4338CA;
      }
      .tagline {
        margin-top: 8px;
        font-size: 11px;
      }
      .detail-row {
        font-size: 11px;
        line-height: 1.45;
        color: #1E1B4B;
      }
      .details {
        margin-top: 8px;
        display: grid;
        gap: 2px;
      }
      .back {
        background: #4F46E5;
        border-color: #1E1B4B;
        color: #ffffff;
      }
      .back-head {
        display: flex;
        justify-content: space-between;
        align-items: flex-start;
        gap: 8px;
      }
      .back-title {
        font-size: 18px;
        font-weight: 800;
        line-height: 1.2;
      }
      .qr {
        width: 52px;
        height: 52px;
        border-radius: 8px;
        background: #ffffff;
        display: flex;
        align-items: center;
        justify-content: center;
      }
      .qr::before {
        content: "";
        width: 24px;
        height: 24px;
        border: 2px solid #101828;
        border-radius: 4px;
      }
      .address {
        margin-top: 8px;
        font-size: 11px;
        line-height: 1.4;
        opacity: 0.95;
      }
      .watermark-overlay {
        position: absolute;
        bottom: 24px;
        right: 24px;
        font-size: 11px;
        font-weight: 800;
        color: #98a2b3;
        opacity: 0.6;
        letter-spacing: 0.5px;
      }
    </style>
  </head>
  <body>
    <div class="page">
      <div class="cards-row">
        <div class="card">
          <div class="front-top">
            <div class="badge">AT</div>
            <div>
              <div class="title">ACME Traders &amp; Sons</div>
              <div class="owner">Shubh Jain</div>
            </div>
          </div>
          <div class="tagline">Trusted billing partner since 2016</div>
          <div class="details">
            <div class="detail-row">+91 98765 43210</div>
            <div class="detail-row">hello@acme.test</div>
            <div class="detail-row">https://acme.test</div>
          </div>
        </div>

        <div class="card back">
          <div class="back-head">
            <div class="back-title">ACME Traders &amp; Sons</div>
            <div class="qr"></div>
          </div>
          <div class="address">Main Road, Ratlam</div>
          <div class="address">GSTIN: 23ABCDE1234F1Z5</div>
        </div>
      </div>
    </div>
    <div class="watermark-overlay">⚡ Generated by Vahi</div>
  </body>
</html>"
`;

exports[`buildBusinessCardHtml > renders stable markup for template: mint_fresh 1`] = `
"
<!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8" />
    <style>
      body {
        margin: 0;
        padding: 24px;
        background: #f5f7fb;
        font-family: "Segoe UI", Arial, sans-serif;
      }
      .page {
        max-width: 760px;
        margin: 0 auto;
      }
      .cards-row {
        display: flex;
        gap: 14px;
        flex-wrap: wrap;
      }
      .card {
        width: 340px;
        min-height: 190px;
        border: 2px solid #059669;
        border-radius: 14px;
        background: #ECFDF5;
        color: #064E3B;
        box-sizing: border-box;
        padding: 14px;
      }
      .front-top {
        display: flex;
        gap: 10px;
        align-items: flex-start;
      }
      .badge {
        width: 40px;
        height: 40px;
        border-radius: 10px;
        border: 1px solid #059669;
        background: #ffffff;
        display: flex;
        align-items: center;
        justify-content: center;
        font-size: 13px;
        font-weight: 700;
        color: #059669;
      }
      .title {
        font-size: 21px;
        font-weight: 800;
        line-height: 1.1;
      }
      .owner {
        margin-top: 4px;
        font-size: 13px;
        font-weight: 700;
        color: #065F46;
      }
      .tagline {
        margin-top: 8px;
        font-size: 11px;
      }
      .detail-row {
        font-size: 11px;
        line-height: 1.45;
        color: #064E3B;
      }
      .details {
        margin-top: 8px;
        display: grid;
        gap: 2px;
      }
      .back {
        background: #059669;
        border-color: #064E3B;
        color: #ffffff;
      }
      .back-head {
        display: flex;
        justify-content: space-between;
        align-items: flex-start;
        gap: 8px;
      }
      .back-title {
        font-size: 18px;
        font-weight: 800;
        line-height: 1.2;
      }
      .qr {
        width: 52px;
        height: 52px;
        border-radius: 8px;
        background: #ffffff;
        display: flex;
        align-items: center;
        justify-content: center;
      }
      .qr::before {
        content: "";
        width: 24px;
        height: 24px;
        border: 2px solid #101828;
        border-radius: 4px;
      }
      .address {
        margin-top: 8px;
        font-size: 11px;
        line-height: 1.4;
        opacity: 0.95;
      }
      .watermark-overlay {
        position: absolute;
        bottom: 24px;
        right: 24px;
        font-size: 11px;
        font-weight: 800;
        color: #98a2b3;
        opacity: 0.6;
        letter-spacing: 0.5px;
      }
    </style>
  </head>
  <body>
    <div class="page">
      <div class="cards-row">
        <div class="card">
          <div class="front-top">
            <div class="badge">AT</div>
            <div>
              <div class="title">ACME Traders &amp; Sons</div>
              <div class="owner">Shubh Jain</div>
            </div>
          </div>
          <div class="tagline">Trusted billing partner since 2016</div>
          <div class="details">
            <div class="detail-row">+91 98765 43210</div>
            <div class="detail-row">hello@acme.test</div>
            <div class="detail-row">https://acme.test</div>
          </div>
        </div>

        <div class="card back">
          <div class="back-head">
            <div class="back-title">ACME Traders &amp; Sons</div>
            <div class="qr"></div>
          </div>
          <div class="address">Main Road, Ratlam</div>
          <div class="address">GSTIN: 23ABCDE1234F1Z5</div>
        </div>
      </div>
    </div>
    <div class="watermark-overlay">⚡ Generated by Vahi</div>
  </body>
</html>"
`;

exports[`buildBusinessCardHtml > renders stable markup for template: ocean_blue 1`] = `
"
<!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8" />
    <style>
      body {
        margin: 0;
        padding: 24px;
        background: #f5f7fb;
        font-family: "Segoe UI", Arial, sans-serif;
      }
      .page {
        max-width: 760px;
        margin: 0 auto;
      }
      .cards-row {
        display: flex;
        gap: 14px;
        flex-wrap: wrap;
      }
      .card {
        width: 340px;
        min-height: 190px;
        border: 2px solid #1D4ED8;
        border-radius: 14px;
        background: #EEF4FF;
        color: #0F2B52;
        box-sizing: border-box;
        padding: 14px;
      }
      .front-top {
        display: flex;
        gap: 10px;
        align-items: flex-start;
      }
      .badge {
        width: 40px;
        height: 40px;
        border-radius: 10px;
        border: 1px solid #1D4ED8;
        background: #ffffff;
        display: flex;
        align-items: center;
        justify-content: center;
        font-size: 13px;
        font-weight: 700;
        color: #1D4ED8;
      }
      .title {
        font-size: 21px;
        font-weight: 800;
        line-height: 1.1;
      }
      .owner {
        margin-top: 4px;
        font-size: 13px;
        font-weight: 700;
        color: #1E40AF;
      }
      .tagline {
        margin-top: 8px;
        font-size: 11px;
      }
      .detail-row {
        font-size: 11px;
        line-height: 1.45;
        color: #0F2B52;
      }
      .details {
        margin-top: 8px;
        display: grid;
        gap: 2px;
      }
      .back {
        background: #1D4ED8;
        border-color: #0F2B52;
        color: #ffffff;
      }
      .back-head {
        display: flex;
        justify-content: space-between;
        align-items: flex-start;
        gap: 8px;
      }
      .back-title {
        font-size: 18px;
        font-weight: 800;
        line-height: 1.2;
      }
      .qr {
        width: 52px;
        height: 52px;
        border-radius: 8px;
        background: #ffffff;
        display: flex;
        align-items: center;
        justify-content: center;
      }
      .qr::before {
        content: "";
        width: 24px;
        height: 24px;
        border: 2px solid #101828;
        border-radius: 4px;
      }
      .address {
        margin-top: 8px;
        font-size: 11px;
        line-height: 1.4;
        opacity: 0.95;
      }
      .watermark-overlay {
        position: absolute;
        bottom: 24px;
        right: 24px;
        font-size: 11px;
        font-weight: 800;
        color: #98a2b3;
        opacity: 0.6;
        letter-spacing: 0.5px;
      }
    </style>
  </head>
  <body>
    <div class="page">
      <div class="cards-row">
        <div class="card">
          <div class="front-top">
            <div class="badge">AT</div>
            <div>
              <div class="title">ACME Traders &amp; Sons</div>
              <div class="owner">Shubh Jain</div>
            </div>
          </div>
          <div class="tagline">Trusted billing partner since 2016</div>
          <div class="details">
            <div class="detail-row">+91 98765 43210</div>
            <div class="detail-row">hello@acme.test</div>
            <div class="detail-row">https://acme.test</div>
          </div>
        </div>

        <div class="card back">
          <div class="back-head">
            <div class="back-title">ACME Traders &amp; Sons</div>
            <div class="qr"></div>
          </div>
          <div class="address">Main Road, Ratlam</div>
          <div class="address">GSTIN: 23ABCDE1234F1Z5</div>
        </div>
      </div>
    </div>
    <div class="watermark-overlay">⚡ Generated by Vahi</div>
  </body>
</html>"
`;

exports[`buildBusinessCardHtml > renders stable markup for template: peach_soft 1`] = `
"
<!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8" />
    <style>
      body {
        margin: 0;
        padding: 24px;
        background: #f5f7fb;
        font-family: "Segoe UI", Arial, sans-serif;
      }
      .page {
        max-width: 760px;
        margin: 0 auto;
      }
      .cards-row {
        display: flex;
        gap: 14px;
        flex-wrap: wrap;
      }
      .card {
        width: 340px;
        min-height: 190px;
        border: 2px solid #EA580C;
        border-radius: 14px;
        background: #FFF7ED;
        color: #7C2D12;
        box-sizing: border-box;
        padding: 14px;
      }
      .front-top {
        display: flex;
        gap: 10px;
        align-items: flex-start;
      }
      .badge {
        width: 40px;
        height: 40px;
        border-radius: 10px;
        border: 1px solid #EA580C;
        background: #ffffff;
        display: flex;
        align-items: center;
        justify-content: center;
        font-size: 13px;
        font-weight: 700;
        color: #EA580C;
      }
      .title {
        font-size: 21px;
        font-weight: 800;
        line-height: 1.1;
      }
      .owner {
        margin-top: 4px;
        font-size: 13px;
        font-weight: 700;
        color: #9A3412;
      }
      .tagline {
        margin-top: 8px;
        font-size: 11px;
      }
      .detail-row {
        font-size: 11px;
        line-height: 1.45;
        color: #7C2D12;
      }
      .details {
        margin-top: 8px;
        display: grid;
        gap: 2px;
      }
      .back {
        background: #EA580C;
        border-color: #7C2D12;
        color: #ffffff;
      }
      .back-head {
        display: flex;
        justify-content: space-between;
        align-items: flex-start;
        gap: 8px;
      }
      .back-title {
        font-size: 18px;
        font-weight: 800;
        line-height: 1.2;
      }
      .qr {
        width: 52px;
        height: 52px;
        border-radius: 8px;
        background: #ffffff;
        display: flex;
        align-items: center;
        justify-content: center;
      }
      .qr::before {
        content: "";
        width: 24px;
        height: 24px;
        border: 2px solid #101828;
        border-radius: 4px;
      }
      .address {
        margin-top: 8px;
        font-size: 11px;
        line-height: 1.4;
        opacity: 0.95;
      }
      .watermark-overlay {
        position: absolute;
        bottom: 24px;
        right: 24px;
        font-size: 11px;
        font-weight: 800;
        color: #98a2b3;
        opacity: 0.6;
        letter-spacing: 0.5px;
      }
    </style>
  </head>
  <body>
    <div class="page">
      <div class="cards-row">
        <div class="card">
          <div class="front-top">
            <div class="badge">AT</div>
            <div>
              <div class="title">ACME Traders &amp; Sons</div>
              <div class="owner">Shubh Jain</div>
            </div>
          </div>
          <div class="tagline">Trusted billing partner since 2016</div>
          <div class="details">
            <div class="detail-row">+91 98765 43210</div>
            <div class="detail-row">hello@acme.test</div>
            <div class="detail-row">https://acme.test</div>
          </div>
        </div>

        <div class="card back">
          <div class="back-head">
            <div class="back-title">ACME Traders &amp; Sons</div>
            <div class="qr"></div>
          </div>
          <div class="address">Main Road, Ratlam</div>
          <div class="address">GSTIN: 23ABCDE1234F1Z5</div>
        </div>
      </div>
    </div>
    <div class="watermark-overlay">⚡ Generated by Vahi</div>
  </body>
</html>"
`;

exports[`buildBusinessCardHtml > renders stable markup for template: rose_modern 1`] = `
"
<!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8" />
    <style>
      body {
        margin: 0;
        padding: 24px;
        background: #f5f7fb;
        font-family: "Segoe UI", Arial, sans-serif;
      }
      .page {
        max-width: 760px;
        margin: 0 auto;
      }
      .cards-row {
        display: flex;
        gap: 14px;
        flex-wrap: wrap;
      }
      .card {
        width: 340px;
        min-height: 190px;
        border: 2px solid #DB2777;
        border-radius: 14px;
        background: #FFF1F5;
        color: #831843;
        box-sizing: border-box;
        padding: 14px;
      }
      .front-top {
        display: flex;
        gap: 10px;
        align-items: flex-start;
      }
      .badge {
        width: 40px;
        height: 40px;
        border-radius: 10px;
        border: 1px solid #DB2777;
        background: #ffffff;
        display: flex;
        align-items: center;
        justify-content: center;
        font-size: 13px;
        font-weight: 700;
        color: #DB2777;
      }
      .title {
        font-size: 21px;
        font-weight: 800;
        line-height: 1.1;
      }
      .owner {
        margin-top: 4px;
        font-size: 13px;
        font-weight: 700;
        color: #9D174D;
      }
      .tagline {
        margin-top: 8px;
        font-size: 11px;
      }
      .detail-row {
        font-size: 11px;
        line-height: 1.45;
        color: #831843;
      }
      .details {
        margin-top: 8px;
        display: grid;
        gap: 2px;
      }
      .back {
        background: #DB2777;
        border-color: #831843;
        color: #ffffff;
      }
      .back-head {
        display: flex;
        justify-content: space-between;
        align-items: flex-start;
        gap: 8px;
      }
      .back-title {
        font-size: 18px;
        font-weight: 800;
        line-height: 1.2;
      }
      .qr {
        width: 52px;
        height: 52px;
        border-radius: 8px;
        background: #ffffff;
        display: flex;
        align-items: center;
        justify-content: center;
      }
      .qr::before {
        content: "";
        width: 24px;
        height: 24px;
        border: 2px solid #101828;
        border-radius: 4px;
      }
      .address {
        margin-top: 8px;
        font-size: 11px;
        line-height: 1.4;
        opacity: 0.95;
      }
      .watermark-overlay {
        position: absolute;
        bottom: 24px;
        right: 24px;
        font-size: 11px;
        font-weight: 800;
        color: #98a2b3;
        opacity: 0.6;
        letter-spacing: 0.5px;
      }
    </style>
  </head>
  <body>
    <div class="page">
      <div class="cards-row">
        <div class="card">
          <div class="front-top">
            <div class="badge">AT</div>
            <div>
              <div class="title">ACME Traders &amp; Sons</div>
              <div class="owner">Shubh Jain</div>
            </div>
          </div>
          <div class="tagline">Trusted billing partner since 2016</div>
          <div class="details">
            <div class="detail-row">+91 98765 43210</div>
            <div class="detail-row">hello@acme.test</div>
            <div class="detail-row">https://acme.test</div>
          </div>
        </div>

        <div class="card back">
          <div class="back-head">
            <div class="back-title">ACME Traders &amp; Sons</div>
            <div class="qr"></div>
          </div>
          <div class="address">Main Road, Ratlam</div>
          <div class="address">GSTIN: 23ABCDE1234F1Z5</div>
        </div>
      </div>
    </div>
    <div class="watermark-overlay">⚡ Generated by Vahi</div>
  </body>
</html>"
`;

exports[`buildBusinessCardHtml > renders stable markup for template: ruby_classic 1`] = `
"
<!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8" />
    <style>
      body {
        margin: 0;
        padding: 24px;
        background: #f5f7fb;
        font-family: "Segoe UI", Arial, sans-serif;
      }
      .page {
        max-width: 760px;
        margin: 0 auto;
      }
      .cards-row {
        display: flex;
        gap: 14px;
        flex-wrap: wrap;
      }
      .card {
        width: 340px;
        min-height: 190px;
        border: 2px solid #DB2777;
        border-radius: 14px;
        background: #FFF1F2;
        color: #4A0817;
        box-sizing: border-box;
        padding: 14px;
      }
      .front-top {
        display: flex;
        gap: 10px;
        align-items: flex-start;
      }
      .badge {
        width: 40px;
        height: 40px;
        border-radius: 10px;
        border: 1px solid #DB2777;
        background: #ffffff;
        display: flex;
        align-items: center;
        justify-content: center;
        font-size: 13px;
        font-weight: 700;
        color: #DB2777;
      }
      .title {
        font-size: 21px;
        font-weight: 800;
        line-height: 1.1;
      }
      .owner {
        margin-top: 4px;
        font-size: 13px;
        font-weight: 700;
        color: #9D174D;
      }
      .tagline {
        margin-top: 8px;
        font-size: 11px;
      }
      .detail-row {
        font-size: 11px;
        line-height: 1.45;
        color: #4A0817;
      }
      .details {
        margin-top: 8px;
        display: grid;
        gap: 2px;
      }
      .back {
        background: #DB2777;
        border-color: #4A0817;
        color: #ffffff;
      }
      .back-head {
        display: flex;
        justify-content: space-between;
        align-items: flex-start;
        gap: 8px;
      }
      .back-title {
        font-size: 18px;
        font-weight: 800;
        line-height: 1.2;
      }
      .qr {
        width: 52px;
        height: 52px;
        border-radius: 8px;
        background: #ffffff;
        display: flex;
        align-items: center;
        justify-content: center;
      }
      .qr::before {
        content: "";
        width: 24px;
        height: 24px;
        border: 2px solid #101828;
        border-radius: 4px;
      }
      .address {
        margin-top: 8px;
        font-size: 11px;
        line-height: 1.4;
        opacity: 0.95;
      }
      .watermark-overlay {
        position: absolute;
        bottom: 24px;
        right: 24px;
        font-size: 11px;
        font-weight: 800;
        color: #98a2b3;
        opacity: 0.6;
        letter-spacing: 0.5px;
      }
    </style>
  </head>
  <body>
    <div class="page">
      <div class="cards-row">
        <div class="card">
          <div class="front-top">
            <div class="badge">AT</div>
            <div>
              <div class="title">ACME Traders &amp; Sons</div>
              <div class="owner">Shubh Jain</div>
            </div>
          </div>
          <div class="tagline">Trusted billing partner since 2016</div>
          <div class="details">
            <div class="detail-row">+91 98765 43210</div>
            <div class="detail-row">hello@acme.test</div>
            <div class="detail-row">https://acme.test</div>
          </div>
        </div>

        <div class="card back">
          <div class="back-head">
            <div class="back-title">ACME Traders &amp; Sons</div>
            <div class="qr"></div>
          </div>
          <div class="address">Main Road, Ratlam</div>
          <div class="address">GSTIN: 23ABCDE1234F1Z5</div>
        </div>
      </div>
    </div>
    <div class="watermark-overlay">⚡ Generated by Vahi</div>
  </body>
</html>"
`;

exports[`buildBusinessCardHtml > renders stable markup for template: slate_business 1`] = `
"
<!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8" />
    <style>
      body {
        margin: 0;
        padding: 24px;
        background: #f5f7fb;
        font-family: "Segoe UI", Arial, sans-serif;
      }
      .page {
        max-width: 760px;
        margin: 0 auto;
      }
      .cards-row {
        display: flex;
        gap: 14px;
        flex-wrap: wrap;
      }
      .card {
        width: 340px;
        min-height: 190px;
        border: 2px solid #334155;
        border-radius: 14px;
        background: #F8FAFC;
        color: #0F172A;
        box-sizing: border-box;
        padding: 14px;
      }
      .front-top {
        display: flex;
        gap: 10px;
        align-items: flex-start;
      }
      .badge {
        width: 40px;
        height: 40px;
        border-radius: 10px;
        border: 1px solid #334155;
        background: #ffffff;
        display: flex;
        align-items: center;
        justify-content: center;
        font-size: 13px;
        font-weight: 700;
        color: #334155;
      }
      .title {
        font-size: 21px;
        font-weight: 800;
        line-height: 1.1;
      }
      .owner {
        margin-top: 4px;
        font-size: 13px;
        font-weight: 700;
        color: #475569;
      }
      .tagline {
        margin-top: 8px;
        font-size: 11px;
      }
      .detail-row {
        font-size: 11px;
        line-height: 1.45;
        color: #0F172A;
      }
      .details {
        margin-top: 8px;
        display: grid;
        gap: 2px;
      }
      .back {
        background: #334155;
        border-color: #0F172A;
        color: #ffffff;
      }
      .back-head {
        display: flex;
        justify-content: space-between;
        align-items: flex-start;
        gap: 8px;
      }
      .back-title {
        font-size: 18px;
        font-weight: 800;
        line-height: 1.2;
      }
      .qr {
        width: 52px;
        height: 52px;
        border-radius: 8px;
        background: #ffffff;
        display: flex;
        align-items: center;
        justify-content: center;
      }
      .qr::before {
        content: "";
        width: 24px;
        height: 24px;
        border: 2px solid #101828;
        border-radius: 4px;
      }
      .address {
        margin-top: 8px;
        font-size: 11px;
        line-height: 1.4;
        opacity: 0.95;
      }
      .watermark-overlay {
        position: absolute;
        bottom: 24px;
        right: 24px;
        font-size: 11px;
        font-weight: 800;
        color: #98a2b3;
        opacity: 0.6;
        letter-spacing: 0.5px;
      }
    </style>
  </head>
  <body>
    <div class="page">
      <div class="cards-row">
        <div class="card">
          <div class="front-top">
            <div class="badge">AT</div>
            <div>
              <div class="title">ACME Traders &amp; Sons</div>
              <div class="owner">Shubh Jain</div>
            </div>
          </div>
          <div class="tagline">Trusted billing partner since 2016</div>
          <div class="details">
            <div class="detail-row">+91 98765 43210</div>
            <div class="detail-row">hello@acme.test</div>
            <div class="detail-row">https://acme.test</div>
          </div>
        </div>

        <div class="card back">
          <div class="back-head">
            <div class="back-title">ACME Traders &amp; Sons</div>
            <div class="qr"></div>
          </div>
          <div class="address">Main Road, Ratlam</div>
          <div class="address">GSTIN: 23ABCDE1234F1Z5</div>
        </div>
      </div>
    </div>
    <div class="watermark-overlay">⚡ Generated by Vahi</div>
  </body>
</html>"
`;

exports[`buildBusinessCardHtml > renders stable markup for template: sunrise_orange 1`] = `
"
<!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8" />
    <style>
      body {
        margin: 0;
        padding: 24px;
        background: #f5f7fb;
        font-family: "Segoe UI", Arial, sans-serif;
      }
      .page {
        max-width: 760px;
        margin: 0 auto;
      }
      .cards-row {
        display: flex;
        gap: 14px;
        flex-wrap: wrap;
      }
      .card {
        width: 340px;
        min-height: 190px;
        border: 2px solid #EA580C;
        border-radius: 14px;
        background: #FFF4EB;
        color: #47280C;
        box-sizing: border-box;
        padding: 14px;
      }
      .front-top {
        display: flex;
        gap: 10px;
        align-items: flex-start;
      }
      .badge {
        width: 40px;
        height: 40px;
        border-radius: 10px;
        border: 1px solid #EA580C;
        background: #ffffff;
        display: flex;
        align-items: center;
        justify-content: center;
        font-size: 13px;
        font-weight: 700;
        color: #EA580C;
      }
      .title {
        font-size: 21px;
        font-weight: 800;
        line-height: 1.1;
      }
      .owner {
        margin-top: 4px;
        font-size: 13px;
        font-weight: 700;
        color: #9A3412;
      }
      .tagline {
        margin-top: 8px;
        font-size: 11px;
      }
      .detail-row {
        font-size: 11px;
        line-height: 1.45;
        color: #47280C;
      }
      .details {
        margin-top: 8px;
        display: grid;
        gap: 2px;
      }
      .back {
        background: #EA580C;
        border-color: #47280C;
        color: #ffffff;
      }
      .back-head {
        display: flex;
        justify-content: space-between;
        align-items: flex-start;
        gap: 8px;
      }
      .back-title {
        font-size: 18px;
        font-weight: 800;
        line-height: 1.2;
      }
      .qr {
        width: 52px;
        height: 52px;
        border-radius: 8px;
        background: #ffffff;
        display: flex;
        align-items: center;
        justify-content: center;
      }
      .qr::before {
        content: "";
        width: 24px;
        height: 24px;
        border: 2px solid #101828;
        border-radius: 4px;
      }
      .address {
        margin-top: 8px;
        font-size: 11px;
        line-height: 1.4;
        opacity: 0.95;
      }
      .watermark-overlay {
        position: absolute;
        bottom: 24px;
        right: 24px;
        font-size: 11px;
        font-weight: 800;
        color: #98a2b3;
        opacity: 0.6;
        letter-spacing: 0.5px;
      }
    </style>
  </head>
  <body>
    <div class="page">
      <div class="cards-row">
        <div class="card">
          <div class="front-top">
            <div class="badge">AT</div>
            <div>
              <div class="title">ACME Traders &amp; Sons</div>
              <div class="owner">Shubh Jain</div>
            </div>
          </div>
          <div class="tagline">Trusted billing partner since 2016</div>
          <div class="details">
            <div class="detail-row">+91 98765 43210</div>
            <div class="detail-row">hello@acme.test</div>
            <div class="detail-row">https://acme.test</div>
          </div>
        </div>

        <div class="card back">
          <div class="back-head">
            <div class="back-title">ACME Traders &amp; Sons</div>
            <div class="qr"></div>
          </div>
          <div class="address">Main Road, Ratlam</div>
          <div class="address">GSTIN: 23ABCDE1234F1Z5</div>
        </div>
      </div>
    </div>
    <div class="watermark-overlay">⚡ Generated by Vahi</div>
  </body>
</html>"
`;

exports[`buildBusinessCardHtml > renders stable markup for template: teal_minimal 1`] = `
"
<!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8" />
    <style>
      body {
        margin: 0;
        padding: 24px;
        background: #f5f7fb;
        font-family: "Segoe UI", Arial, sans-serif;
      }
      .page {
        max-width: 760px;
        margin: 0 auto;
      }
      .cards-row {
        display: flex;
        gap: 14px;
        flex-wrap: wrap;
      }
      .card {
        width: 340px;
        min-height: 190px;
        border: 2px solid #0F766E;
        border-radius: 14px;
        background: #F0FDFA;
        color: #134E4A;
        box-sizing: border-box;
        padding: 14px;
      }
      .front-top {
        display: flex;
        gap: 10px;
        align-items: flex-start;
      }
      .badge {
        width: 40px;
        height: 40px;
        border-radius: 10px;
        border: 1px solid #0F766E;
        background: #ffffff;
        display: flex;
        align-items: center;
        justify-content: center;
        font-size: 13px;
        font-weight: 700;
        color: #0F766E;
      }
      .title {
        font-size: 21px;
        font-weight: 800;
        line-height: 1.1;
      }
      .owner {
        margin-top: 4px;
        font-size: 13px;
        font-weight: 700;
        color: #0F766E;
      }
      .tagline {
        margin-top: 8px;
        font-size: 11px;
      }
      .detail-row {
        font-size: 11px;
        line-height: 1.45;
        color: #134E4A;
      }
      .details {
        margin-top: 8px;
        display: grid;
        gap: 2px;
      }
      .back {
        background: #0F766E;
        border-color: #134E4A;
        color: #ffffff;
      }
      .back-head {
        display: flex;
        justify-content: space-between;
        align-items: flex-start;
        gap: 8px;
      }
      .back-title {
        font-size: 18px;
        font-weight: 800;
        line-height: 1.2;
      }
      .qr {
        width: 52px;
        height: 52px;
        border-radius: 8px;
        background: #ffffff;
        display: flex;
        align-items: center;
        justify-content: center;
      }
      .qr::before {
        content: "";
        width: 24px;
        height: 24px;
        border: 2px solid #101828;
        border-radius: 4px;
      }
      .address {
        margin-top: 8px;
        font-size: 11px;
        line-height: 1.4;
        opacity: 0.95;
      }
      .watermark-overlay {
        position: absolute;
        bottom: 24px;
        right: 24px;
        font-size: 11px;
        font-weight: 800;
        color: #98a2b3;
        opacity: 0.6;
        letter-spacing: 0.5px;
      }
    </style>
  </head>
  <body>
    <div class="page">
      <div class="cards-row">
        <div class="card">
          <div class="front-top">
            <div class="badge">AT</div>
            <div>
              <div class="title">ACME Traders &amp; Sons</div>
              <div class="owner">Shubh Jain</div>
            </div>
          </div>
          <div class="tagline">Trusted billing partner since 2016</div>
          <div class="details">
            <div class="detail-row">+91 98765 43210</div>
            <div class="detail-row">hello@acme.test</div>
            <div class="detail-row">https://acme.test</div>
          </div>
        </div>

        <div class="card back">
          <div class="back-head">
            <div class="back-title">ACME Traders &amp; Sons</div>
            <div class="qr"></div>
          </div>
          <div class="address">Main Road, Ratlam</div>
          <div class="address">GSTIN: 23ABCDE1234F1Z5</div>
        </div>
      </div>
    </div>
    <div class="watermark-overlay">⚡ Generated by Vahi</div>
  </body>
</html>"
`;
